examples/errors/computeLayer/DuplicatePatternKeycode.bkf
layer foo:
| "a" "a" => [] -- How can a key be pressed twice at the same time?
